--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
+    "astro": "^4.6.3",
+    "pnpm": "^9.0.5",
     "typescript": "^5.2.2"
   }
 }
